add android log

--- a/jni/ffmpeg/README
+++ b/jni/ffmpeg/README
@@ -10,3 +10,4 @@ FFmpeg README
 ------------
 
 * See the LICENSE file.
+ndk-build NDK_PROJECT_PATH=. APP_BUILD_SCRIPT=./Android.mk NDK_APPLICATION_MK=./Application.mk
