可以拷贝yuv数据了

--- a/jni/ffmpeg/README
+++ b/jni/ffmpeg/README
@@ -13,3 +13,4 @@ FFmpeg README
 
 build cmd:
 ndk-build NDK_PROJECT_PATH=. APP_BUILD_SCRIPT=./Android.mk NDK_APPLICATION_MK=./Application.mk
+chmod 0777 /dev/cedar_dev
